[metadata]
name = aevent
description = 
author = Matthias Urlichs
author_email = matthias@urlichs.de
project_urls =
    Source code = https://github.com/M-o-a-T/aevent
    Issue tracker = https://github.com/M-o-a-T/aevent/issues
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    = src
packages = find:
python_requires = >= 3.7.0
zip_safe = False
install_requires =
    greenback
    anyio >= 2

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 4.3
    pytest_trio
trio = trio >= 0.16

doc =
    sphinx_rtd_theme

[options.entry_points]
pytest11 =
    aevent = aevent.pytest_plugin

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests
filterwarnings = always

[coverage:run]
source = anyio
relative_files = true

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

